@@ -19,6 +19,8 @@ valid with MySQL are importable from the top level dialect::
 Types which are specific to MySQL, or have MySQL-specific 
 construction arguments, are as follows:
 
+.. currentmodule:: sqlalchemy.dialects.mysql
+
 .. autoclass:: BIGINT
     :members: __init__
     :show-inheritance:
