@@ -17,6 +17,14 @@ they originate from :mod:`sqlalchemy.types` or from the local dialect::
                 INTEGER, NUMERIC, SMALLINT, TEXT, TIME, TIMESTAMP, \
                 VARCHAR
 
+.. module:: sqlalchemy.dialects.sqlite
+
+.. autoclass:: DATETIME
+
+.. autoclass:: DATE
+
+.. autoclass:: TIME
+
 Pysqlite
 --------
 
